--- a/templates/index.html
+++ b/templates/index.html
@@ -13,13 +13,13 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <!-- TU CSS PROPIO -->
+    <!-- CSS PROPIO -->
     <link rel="stylesheet" href="{{ url_for('static', path='css/styles.css') }}">
 </head>
 <body class="bg-white">
     
     <!-- Header -->
-    <header class="bg-gradient-to-r from-gray-950 via-gray-700 to-blue-600 text-white py-4 fixed w-full top-0 z-50 shadow-lg">
+    <header class="bg-gradient-to-r from-gray-950 via-gray-700 to-blue-600 text-white py-1 fixed w-full top-0 z-50 shadow-lg">
         <div class="container mx-auto px-4">
             <div class="flex justify-between items-center">
                 <!-- Logo -->
@@ -88,22 +88,22 @@
             </div>
             
             <!-- Feature Cards -->
-            <div class="grid grid-cols-1 md:grid-cols-4 gap-6 max-w-6xl mx-auto mt-16">
-                <div class="feature-card bg-white/10 backdrop-blur-md p-6 rounded-2xl">
-                    <h3 class="font-bold text-xl mb-2">Servicio a Domicilio</h3>
+            <div class="grid grid-cols-2 md:grid-cols-4 gap-4 max-w-2xl mx-auto mt-2">
+                <div class="feature-card bg-white/10 backdrop-blur-md p-6 rounded-2xl reveal">
+                    <h3 class="font-semibold text-sm mb-2">SERVICIO A DOMICILIO</h3>
                     <p class="text-sm">Vamos hasta donde estés</p>
                 </div>
-                <div class="feature-card bg-white/10 backdrop-blur-md p-6 rounded-2xl">
-                    <h3 class="font-bold text-xl mb-2">Puntualidad</h3>
+                <div class="feature-card bg-white/10 backdrop-blur-md p-6 rounded-2xl reveal">
+                    <h3 class="font-semibold text-sm mb-2">PUNTUALIDAD</h3>
                     <p class="text-sm">Respetamos tu tiempo</p>
                 </div>
-                <div class="feature-card bg-white/10 backdrop-blur-md p-6 rounded-2xl">
-                    <h3 class="font-bold text-xl mb-2">Calidad Premium</h3>
+                <div class="feature-card bg-white/10 backdrop-blur-md p-6 rounded-2xl reveal ">
+                    <h3 class="font-semibold text-sm mb-2">CALIDAD PREMIUM</h3>
                     <p class="text-sm">Productos profesionales</p>
                 </div>
-                <div class="feature-card bg-white/10 backdrop-blur-md p-6 rounded-2xl">
-                    <h3 class="font-bold text-xl mb-2">Garantía</h3>
-                    <p class="text-sm">100% satisfacción</p>
+                <div class="feature-card bg-white/10 backdrop-blur-md p-6 rounded-2xl reveal">
+                    <h3 class="font-semibold text-sm mb-2">GARANTÍA</h3>
+                    <p class="text-sm">100% de satisfacción</p>
                 </div>
             </div>
         </div>
