--- a/templates/index.html
+++ b/templates/index.html
@@ -52,8 +52,8 @@
             </div>
 
             <!-- Mobile Navigation -->
-            <div id="mobile-menu" class="mobile-menu md:hidden mt-4">
-                <nav class="flex flex-col space-y-4 bg-blue-900 rounded-lg p-4 pb-6 shadow-xl">
+            <div id="mobile-menu" class="mobile-menu md:hidden">
+                <nav class="flex flex-col space-y-4 bg-blue-900 rounded-lg p-4 pb-6 shadow-xl mt-4">
                     <a href="#inicio" class="hover:text-blue-400 transition font-medium py-2">Inicio</a>
                     <a href="#servicios" class="hover:text-blue-400 transition font-medium py-2">Servicios</a>
                     <a href="#experiencia-corporativa" class="hover:text-blue-400 transition font-medium py-2">Experiencia Corporativa</a>
