--- a/templates/index.html
+++ b/templates/index.html
@@ -44,9 +44,9 @@
                 </div>
 
                 <!-- Mobile Menu Button -->
-                <button id="mobile-menu-btn" class="md:hidden text-blue-500 focus:outline-none"> <!-- id="mobile-menu-btn ES PARA JS " -->
-                    <svg class="w-9 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24"> <!--  tamaño, color y cordenada del dinujo -->
-                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path> <!-- dibuja las tres lineas del menu -->
+                <button id="mobile-menu-btn" type="button" class="md:hidden text-blue-500 focus:outline-none">
+                    <svg class="w-9 h-10" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
                     </svg> 
                 </button>
             </div>
