--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -16,15 +16,17 @@ html {
 }
 
 .mobile-menu {
+    display: none;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease-out;
     opacity: 0;
+    transition: opacity 0.2s ease;
 }
 
 .mobile-menu.active {
-    max-height: 500px;
-    overflow-y: auto;
+    display: block;
+    max-height: 1000px;
+    overflow: visible;
     opacity: 1;
 }
 
